mongo-pvc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mongo
spec:
  volumes:
  - name: mongo-nfs
    persistentVolumeClaim:
      claimName: pvc-mongo
  containers:
  - image: reg.cloud.com/mongo
    name: mongodb
    volumeMounts:
    - name: mongo-nfs
      mountPath: /data/db
    ports:
    - containerPort: 27017
      protocol: TCP
