mongo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mongo
spec:
  volumes:
  - name: mongo-nfs
    nfs:
      server: 10.10.12.244
      path: /nfs/data
  containers:
  - image: reg.cloud.com/mongo
    name: mongodb
    volumeMounts:
    - name: mongo-nfs
      mountPath: /data/db
    ports:
    - containerPort: 27017
      protocol: TCP
