simple-probe.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-liveness
spec:
  containers:
  - image: reg.cloud.com/kubia-unhealthy
    name: test
    ports:
    - containerPort: 8080
    livenessProbe:
      httpGet:
        path: /
        port: 8080
