simple.yaml
apiVersion: v1
kind: Pod
metadata:
  name: simple3
spec:
  containers:
  - image: reg.cloud.com/kubia:v1
    name: kubia
    ports:
    - containerPort: 8080
      hostPort: 81
