ep.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: kubia-svc
subsets:
  - addresses:
    - ip: 11.11.11.11
    - ip: 10.10.10.11
    ports:
    - port: 81
