svc-ep.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-svc
spec:
  ports:
  - port: 80
    targetPort: 8080
