svc-hl.yaml
apiVersion: v1
kind: Service
metadata:
  name: test
spec:
  clusterIP: None
  selector:
    rel: prod
  ports:
  - port: 80
    targetPort: 8080
