svc-np.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-np
spec:
  selector:
    type: web
  ports:
  - port: 80
    targetPort: 8080
  type: NodePort
