svc-readiness.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-readiness
spec:
  selector:
    rel: prod
  ports:
  - port: 80
    targetPort: 8080
