svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-svc
spec:
  selector:
    type: web
  ports:
  - port: 80
    targetPort: 8080
