svc3.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs
spec:
  selector:
    name: nodejs
  ports:
  - port: 80
