ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ing-svc
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
spec:
  tls:
  - hosts:
    - host24-4.cloud.com
    secretName: tls-secret
  rules:
  - host: host24-4.cloud.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nodejs
          servicePort: 80
      - path: /kubia
        backend:
          serviceName: kubia-svc
          servicePort: 80
